--- a/index.html
+++ b/index.html
@@ -2535,7 +2535,7 @@ TLS. Медиа данные - протоколом SRTP.
                   Номер Вашего телефона
                 </div>
                 <div class="vopros-input">
-                  <input type="text" size="40" placeholder="+7">
+                  <input type="text" class="phone-input" size="40" placeholder="+7">
                 </div>
               </div>
               <div class="vopros-block">
@@ -2602,7 +2602,7 @@ TLS. Медиа данные - протоколом SRTP.
                   Номер Вашего телефона
                 </div>
                 <div class="vopros-input">
-                  <input type="text" size="40" placeholder="+7">
+                  <input type="text" class="phone-input" size="40" placeholder="+7">
                 </div>
               </div>
               <div class="vopros-block">
@@ -2669,7 +2669,7 @@ TLS. Медиа данные - протоколом SRTP.
                   Номер Вашего телефона
                 </div>
                 <div class="vopros-input">
-                  <input type="text" size="40" placeholder="+7">
+                  <input type="text" class="phone-input" size="40" placeholder="+7">
                 </div>
               </div>
               <div class="vopros-block">
@@ -2736,7 +2736,7 @@ TLS. Медиа данные - протоколом SRTP.
                   Номер Вашего телефона
                 </div>
                 <div class="vopros-input">
-                  <input type="text" size="40" placeholder="+7">
+                  <input type="text" class="phone-input" size="40" placeholder="+7">
                 </div>
               </div>
               <div class="vopros-block">
@@ -2803,7 +2803,7 @@ TLS. Медиа данные - протоколом SRTP.
                   Номер Вашего телефона
                 </div>
                 <div class="vopros-input">
-                  <input type="text" size="40" placeholder="+7">
+                  <input type="text" class="phone-input" size="40" placeholder="+7">
                 </div>
               </div>
               <div class="vopros-block">
@@ -3866,7 +3866,7 @@ TLS. Медиа данные - протоколом SRTP.
                   Номер Вашего телефона
                 </div>
                 <div class="vopros-input">
-                  <input type="text" size="40" placeholder="+7">
+                  <input type="text" class="phone-input" size="40" placeholder="+7">
                 </div>
               </div>
               <div class="vopros-block">
@@ -3994,7 +3994,7 @@ TLS. Медиа данные - протоколом SRTP.
                   Номер Вашего телефона
                 </div>
                 <div class="vopros-input">
-                  <input type="text" size="40" placeholder="+7">
+                  <input type="text" class="phone-input" size="40" placeholder="+7">
                 </div>
               </div>
               <div class="vopros-block">
@@ -4122,7 +4122,7 @@ TLS. Медиа данные - протоколом SRTP.
                   Номер Вашего телефона
                 </div>
                 <div class="vopros-input">
-                  <input type="text" size="40" placeholder="+7">
+                  <input type="text" class="phone-input" size="40" placeholder="+7">
                 </div>
               </div>
               <div class="vopros-block">
@@ -4252,7 +4252,7 @@ TLS. Медиа данные - протоколом SRTP.
                   Номер Вашего телефона
                 </div>
                 <div class="vopros-input">
-                  <input type="text" size="40" placeholder="+7">
+                  <input type="text" class="phone-input" size="40" placeholder="+7">
                 </div>
               </div>
               <div class="vopros-block">
@@ -4320,7 +4320,7 @@ TLS. Медиа данные - протоколом SRTP.
                   Номер Вашего телефона
                 </div>
                 <div class="vopros-input">
-                  <input type="text" size="40" placeholder="+7">
+                  <input type="text" class="phone-input" size="40" placeholder="+7">
                 </div>
               </div>
               <div class="vopros-block">
@@ -4387,7 +4387,7 @@ TLS. Медиа данные - протоколом SRTP.
                   Номер Вашего телефона
                 </div>
                 <div class="vopros-input">
-                  <input type="text" size="40" placeholder="+7">
+                  <input type="text" class="phone-input" size="40" placeholder="+7">
                 </div>
               </div>
               <div class="vopros-block">
@@ -4454,7 +4454,7 @@ TLS. Медиа данные - протоколом SRTP.
                   Номер Вашего телефона
                 </div>
                 <div class="vopros-input">
-                  <input type="text" size="40" placeholder="+7">
+                  <input type="text" class="phone-input" size="40" placeholder="+7">
                 </div>
               </div>
               <div class="vopros-block">
@@ -4521,7 +4521,7 @@ TLS. Медиа данные - протоколом SRTP.
                   Номер Вашего телефона
                 </div>
                 <div class="vopros-input">
-                  <input type="text" size="40" placeholder="+7">
+                  <input type="text" class="phone-input" size="40" placeholder="+7">
                 </div>
               </div>
               <div class="vopros-block">
