--- a/texnik.html
+++ b/texnik.html
@@ -2373,7 +2373,7 @@ TLS. Медиа данные - протоколом SRTP.
                 Номер Вашего телефона
               </div>
               <div class="vopros-input">
-                <input type="text" size="40" placeholder="+7">
+                <input type="text" class="phone-input" size="40" placeholder="+7">
               </div>
             </div>
             <div class="vopros-block">
@@ -2552,7 +2552,7 @@ TLS. Медиа данные - протоколом SRTP.
                   Номер Вашего телефона
                 </div>
                 <div class="vopros-input">
-                  <input type="text" size="40" placeholder="+7">
+                  <input type="text" class="phone-input" size="40" placeholder="+7">
                 </div>
               </div>
               <div class="vopros-block">
@@ -2619,7 +2619,7 @@ TLS. Медиа данные - протоколом SRTP.
                   Номер Вашего телефона
                 </div>
                 <div class="vopros-input">
-                  <input type="text" size="40" placeholder="+7">
+                  <input type="text" class="phone-input" size="40" placeholder="+7">
                 </div>
               </div>
               <div class="vopros-block">
@@ -2686,7 +2686,7 @@ TLS. Медиа данные - протоколом SRTP.
                   Номер Вашего телефона
                 </div>
                 <div class="vopros-input">
-                  <input type="text" size="40" placeholder="+7">
+                  <input type="text" class="phone-input" size="40" placeholder="+7">
                 </div>
               </div>
               <div class="vopros-block">
@@ -2753,7 +2753,7 @@ TLS. Медиа данные - протоколом SRTP.
                   Номер Вашего телефона
                 </div>
                 <div class="vopros-input">
-                  <input type="text" size="40" placeholder="+7">
+                  <input type="text" class="phone-input" size="40" placeholder="+7">
                 </div>
               </div>
               <div class="vopros-block">
@@ -2820,7 +2820,7 @@ TLS. Медиа данные - протоколом SRTP.
                   Номер Вашего телефона
                 </div>
                 <div class="vopros-input">
-                  <input type="text" size="40" placeholder="+7">
+                  <input type="text" class="phone-input" size="40" placeholder="+7">
                 </div>
               </div>
               <div class="vopros-block">
@@ -3080,7 +3080,7 @@ TLS. Медиа данные - протоколом SRTP.
                   Номер Вашего телефона
                 </div>
                 <div class="vopros-input">
-                  <input type="text" size="40" placeholder="+7">
+                  <input type="text" class="phone-input" size="40" placeholder="+7">
                 </div>
               </div>
               <div class="vopros-block">
@@ -3156,7 +3156,7 @@ TLS. Медиа данные - протоколом SRTP.
                   Номер Вашего телефона
                 </div>
                 <div class="vopros-input">
-                  <input type="text" size="40" placeholder="+7">
+                  <input type="text" class="phone-input" size="40" placeholder="+7">
                 </div>
               </div>
               <div class="vopros-block">
@@ -3231,7 +3231,7 @@ TLS. Медиа данные - протоколом SRTP.
                   Номер Вашего телефона
                 </div>
                 <div class="vopros-input">
-                  <input type="text" size="40" placeholder="+7">
+                  <input type="text" class="phone-input" size="40" placeholder="+7">
                 </div>
               </div>
               <div class="vopros-block">
@@ -3298,7 +3298,7 @@ TLS. Медиа данные - протоколом SRTP.
                   Номер Вашего телефона
                 </div>
                 <div class="vopros-input">
-                  <input type="text" size="40" placeholder="+7">
+                  <input type="text" class="phone-input" size="40" placeholder="+7">
                 </div>
               </div>
               <div class="vopros-block">
@@ -3367,7 +3367,7 @@ TLS. Медиа данные - протоколом SRTP.
                   Номер Вашего телефона
                 </div>
                 <div class="vopros-input">
-                  <input type="text" size="40" placeholder="+7">
+                  <input type="text" class="phone-input" size="40" placeholder="+7">
                 </div>
               </div>
               <div class="vopros-block">
