--- a/tarif.html
+++ b/tarif.html
@@ -1345,7 +1345,7 @@
                 Номер Вашего телефона
               </div>
               <div class="vopros-input">
-                <input type="text" size="40" placeholder="+7">
+                <input type="text" class="phone-input " size="40" class="phone-input" placeholder="+7">
               </div>
             </div>
             <div class="vopros-block">
@@ -1524,7 +1524,7 @@
                   Номер Вашего телефона
                 </div>
                 <div class="vopros-input">
-                  <input type="text" size="40" placeholder="+7">
+                  <input type="text" size="40" class="phone-input" placeholder="+7">
                 </div>
               </div>
               <div class="vopros-block">
@@ -1592,7 +1592,7 @@
                   Номер Вашего телефона
                 </div>
                 <div class="vopros-input">
-                  <input type="text" size="40" placeholder="+7">
+                  <input type="text" size="40" class="phone-input" placeholder="+7">
                 </div>
               </div>
               <div class="vopros-block">
@@ -1659,7 +1659,7 @@
                   Номер Вашего телефона
                 </div>
                 <div class="vopros-input">
-                  <input type="text" size="40" placeholder="+7">
+                  <input type="text" size="40" class="phone-input" placeholder="+7">
                 </div>
               </div>
               <div class="vopros-block">
@@ -1726,7 +1726,7 @@
                   Номер Вашего телефона
                 </div>
                 <div class="vopros-input">
-                  <input type="text" size="40" placeholder="+7">
+                  <input type="text" size="40" class="phone-input" placeholder="+7">
                 </div>
               </div>
               <div class="vopros-block">
@@ -2779,7 +2779,7 @@
                   Номер Вашего телефона
                 </div>
                 <div class="vopros-input">
-                  <input type="text" size="40" placeholder="+7">
+                  <input type="text" size="40" class="phone-input" placeholder="+7">
                 </div>
               </div>
               <div class="vopros-block">
@@ -2906,7 +2906,7 @@
                   Номер Вашего телефона
                 </div>
                 <div class="vopros-input">
-                  <input type="text" size="40" placeholder="+7">
+                  <input type="text" size="40" class="phone-input" placeholder="+7">
                 </div>
               </div>
               <div class="vopros-block">
@@ -3039,7 +3039,7 @@
                   Номер Вашего телефона
                 </div>
                 <div class="vopros-input">
-                  <input type="text" size="40" placeholder="+7">
+                  <input type="text" size="40" class="phone-input" placeholder="+7">
                 </div>
               </div>
               <div class="vopros-block">
@@ -3170,7 +3170,7 @@
                   Номер Вашего телефона
                 </div>
                 <div class="vopros-input">
-                  <input type="text" size="40" placeholder="+7">
+                  <input type="text" size="40" class="phone-input " placeholder="+7">
                 </div>
               </div>
               <div class="vopros-block">
@@ -3299,7 +3299,7 @@
                   Номер Вашего телефона
                 </div>
                 <div class="vopros-input">
-                  <input type="text" size="40" placeholder="+7">
+                  <input type="text" size="40" class="phone-input " placeholder="+7">
                 </div>
               </div>
               <div class="vopros-block">
@@ -3367,7 +3367,7 @@
                   Номер Вашего телефона
                 </div>
                 <div class="vopros-input">
-                  <input type="text" size="40" placeholder="+7">
+                  <input type="text" size="40" class="phone-input " placeholder="+7">
                 </div>
               </div>
               <div class="vopros-block">
@@ -3434,7 +3434,7 @@
                   Номер Вашего телефона
                 </div>
                 <div class="vopros-input">
-                  <input type="text" size="40" placeholder="+7">
+                  <input type="text" size="40" class="phone-input " placeholder="+7">
                 </div>
               </div>
               <div class="vopros-block">
@@ -3501,7 +3501,7 @@
                   Номер Вашего телефона
                 </div>
                 <div class="vopros-input">
-                  <input type="text" size="40" placeholder="+7">
+                  <input type="text" size="40" class="phone-input " placeholder="+7">
                 </div>
               </div>
               <div class="vopros-block">
@@ -3568,7 +3568,7 @@
                   Номер Вашего телефона
                 </div>
                 <div class="vopros-input">
-                  <input type="text" size="40" placeholder="+7">
+                  <input type="text" size="40" class="phone-input " placeholder="+7">
                 </div>
               </div>
               <div class="vopros-block">
@@ -3640,7 +3640,7 @@
                   Номер Вашего телефона
                 </div>
                 <div class="vopros-input">
-                  <input type="text" size="40" placeholder="+7">
+                  <input type="text" size="40" class="phone-input " placeholder="+7">
                 </div>
               </div>
               <div class="vopros-block">
