add content edit

--- a/texnik.html
+++ b/texnik.html
@@ -408,7 +408,7 @@
                         <div class="raschet-skolko-znak minus">
                           -
                         </div>
-                        <div class="raschet-skolko-number">
+                        <div class="raschet-skolko-number" contenteditable="true">
                           15
                         </div>
                         <div class="raschet-skolko-znak plus">
